Tesi (versione 0.5)

   * Commentati vari moduli
   * Il codice gira correttamente senza errori, ma non è da escludersi la presenza di bug

  -- Ludovica Pannitto <ellepannitto@gmail.com>  Tue, 15 Mar 2016 18:24:59 +0100

Tesi (versione 0.2)

   * Aggiunto il changelog (questo file)
   * Commentata la classe Hasher

  -- Ludovica Pannitto <ellepannitto@gmail.com>  Sun, 13 Mar 2016 11:59:31 +0100