@@ -1,3 +1,9 @@
+Tesi (versione 0.6)
+
+   * Aggiunto InfoPlotter
+
+  -- Ludovica Pannitto <ellepannitto@gmail.com>  Fri, 22 Apr 2016 19:30:24 +0100
+
 Tesi (versione 0.5)
 
    * Commentati vari moduli
